<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#f0ffff"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView android:text="@string/titulo"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#00008b"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/quiz"
                android:textSize="20dp" />
            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:inputType="numberDecimal"
                android:hint="@string/digit"
                android:id="@+id/eQuiz"
                android:textSize="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/expo"
                android:textSize="20dp" />
            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:inputType="numberDecimal"
                android:hint="@string/digit"
                android:id="@+id/eexpo"
                android:textSize="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/plabs"
                android:textSize="20dp" />
            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:hint="@string/digit"
                android:inputType="numberDecimal"
                android:id="@+id/ePlab"
                android:textSize="18dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/pfinal"
                android:textSize="20dp" />
            <EditText
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:inputType="numberDecimal"
                android:hint="@string/digit"
                android:id="@+id/epfin"
                android:textSize="18dp"/>
        </LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:layout_gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calc"
        android:id="@+id/bcalc"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/res"
        android:id="@+id/tres"
        android:layout_marginTop="15dp"
        android:textSize="30dp"/>

</LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
